--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,16 +1,14 @@
-@article{Shee2013,
-   abstract = {Spontaneous DNA breaks instigate genomic changes that fuel cancer and evolution, yet direct quantification of double-strand breaks (DSBs) has been limited. Predominant sources of spontaneous DSBs remain elusive. We report synthetic technology for quantifying DSBs using fluorescent-protein fusions of double-strand DNA end-binding protein, Gam of bacteriophage Mu. In Escherichia coli GamGFP forms foci at chromosomal DSBs and pinpoints their subgenomic locations. Spontaneous DSBs occur mostly one per cell, and correspond with generations, supporting replicative models for spontaneous breakage, and providing the first true breakage rates. In mammalian cells GamGFP-labels laser-induced DSBs antagonized by end-binding protein Ku; co-localizes incompletely with DSB marker 53BP1 suggesting superior DSB-specificity; blocks resection; and demonstrates DNA breakage via APOBEC3A cytosine deaminase. We demonstrate directly that some spontaneous DSBs occur outside of S phase. The data illuminate spontaneous DNA breakage in E. coli and human cells and illustrate the versatility of fluorescent-Gam for interrogation of DSBs in living cells. © Shee et al.},
-   author = {Chandan Shee and Ben D. Cox and Franklin Gu and Elizabeth M. Luengas and Mohan C. Joshi and Li Ya Chiu and David Magnan and Jennifer A. Halliday and Ryan L. Frisch and Janet L. Gibson and Ralf Bernd Nehring and Huong G. Do and Marcos Hernandez and Lei Li and Christophe Herman and P. J. Hastings and David Bates and Reuben S. Harris and Kyle M. Miller and Susan M. Rosenberg},
-   doi = {10.7554/ELIFE.01222.001},
-   issn = {2050084X},
-   issue = {2},
+@article{Kalita2024,
+   abstract = {All living organisms have developed strategies to respond to chromosomal damage and preserve genome integrity. One such response is the repair of DNA double-strand breaks (DSBs), one of the most toxic forms of DNA lesions. In Escherichia coli, DSBs are repaired via RecBCD-dependent homologous recombination. RecBCD is essential for accurate chromosome maintenance, but its over-expression can lead to reduced DNA repair ability. This apparent paradox suggests that RecBCD copy numbers may need to be tightly controlled within an optimal range. Using single-molecule fluorescence mi-croscopy, we have established that RecB is present in very low abundance at mRNA and protein levels. RecB transcription shows high fluctuations, yet cell-to-cell protein variability remains remarkably low. Here, we show that the post-transcriptional regulator Hfq binds to recB mRNA and down-regulates RecB protein translation in vivo. Furthermore, specific disruption of the Hfq-binding site leads to more efficient translation of recB mRNAs. In addition, we observe a less effective reduction of RecB protein fluctuations in the absence of Hfq. This fine-tuning Hfq-mediated mechanism might have the underlying physiological function of maintaining RecB protein levels within an optimal range.},
+   author = {Irina Kalita and Ira Alexandra Iosub and Lorna McLaren and Louise Goossens and Sander Granneman and Meriem El Karoui},
+   doi = {10.7554/ELIFE.94918.1},
    journal = {eLife},
-   month = {10},
-   pmid = {24171103},
-   publisher = {eLife Sciences Publications Ltd},
-   title = {Engineered proteins detect spontaneous DNA breakage in human and bacterial cells},
-   volume = {2013},
-   year = {2013},
+   month = {5},
+   publisher = {eLife Sciences Publications Limited},
+   title = {An Hfq-dependent post-transcriptional mechanism fine tunes RecB expression in Escherichia coli},
+   volume = {13},
+   url = {https://elifesciences.org/reviewed-preprints/94918},
+   year = {2024},
 }
 @article{Lepore2019a,
    abstract = {Cell biology is increasingly dependent on quantitative methods resulting in the need for microscopic labelling technologies that are highly sensitive and specific. Whilst the use of fluorescent proteins has led to major advances, they also suffer from their relatively low brightness and photo-stability, making the detection of very low abundance proteins using fluorescent protein-based methods challenging. Here, we characterize the use of the self-labelling protein tag called HaloTag, in conjunction with an organic fluorescent dye, to label and accurately count endogenous proteins present in very low numbers (<7) in individual Escherichia coli cells. This procedure can be used to detect single molecules in fixed cells with conventional epifluorescence illumination and a standard microscope. We show that the detection efficiency of proteins labelled with the HaloTag is ≥80%, which is on par or better than previous techniques. Therefore, this method offers a simple and attractive alternative to current procedures to detect low abundance molecules.},
@@ -1005,4 +1003,18 @@ The authors have declared no competing interest.},
    volume = {191},
    url = {https://journals.asm.org/doi/10.1128/jb.01877-07},
    year = {2009},
+}
+@article{Shee2013,
+   abstract = {Spontaneous DNA breaks instigate genomic changes that fuel cancer and evolution, yet direct quantification of double-strand breaks (DSBs) has been limited. Predominant sources of spontaneous DSBs remain elusive. We report synthetic technology for quantifying DSBs using fluorescent-protein fusions of double-strand DNA end-binding protein, Gam of bacteriophage Mu. In Escherichia coli GamGFP forms foci at chromosomal DSBs and pinpoints their subgenomic locations. Spontaneous DSBs occur mostly one per cell, and correspond with generations, supporting replicative models for spontaneous breakage, and providing the first true breakage rates. In mammalian cells GamGFP-labels laser-induced DSBs antagonized by end-binding protein Ku; co-localizes incompletely with DSB marker 53BP1 suggesting superior DSB-specificity; blocks resection; and demonstrates DNA breakage via APOBEC3A cytosine deaminase. We demonstrate directly that some spontaneous DSBs occur outside of S phase. The data illuminate spontaneous DNA breakage in E. coli and human cells and illustrate the versatility of fluorescent-Gam for interrogation of DSBs in living cells. © Shee et al.},
+   author = {Chandan Shee and Ben D. Cox and Franklin Gu and Elizabeth M. Luengas and Mohan C. Joshi and Li Ya Chiu and David Magnan and Jennifer A. Halliday and Ryan L. Frisch and Janet L. Gibson and Ralf Bernd Nehring and Huong G. Do and Marcos Hernandez and Lei Li and Christophe Herman and P. J. Hastings and David Bates and Reuben S. Harris and Kyle M. Miller and Susan M. Rosenberg},
+   doi = {10.7554/ELIFE.01222.001},
+   issn = {2050084X},
+   issue = {2},
+   journal = {eLife},
+   month = {10},
+   pmid = {24171103},
+   publisher = {eLife Sciences Publications Ltd},
+   title = {Engineered proteins detect spontaneous DNA breakage in human and bacterial cells},
+   volume = {2013},
+   year = {2013},
 }
