--- a/Results.tex
+++ b/Results.tex
@@ -58,11 +58,11 @@ Using the time-lapse data, we built histograms of RecB spot lifetimes at the dif
 % Gam
 To determine whether short- or long-lived spots resulted from RecB binding to DSBs, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind to the RecBCD complex instead of DNA double-strand ends \cite{Wilkinson2016}, and its overexpression is therefore expected to abolish RecBCD binding to DSBs. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, as a result of the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT}). This was confirmed by fitting the histogram with our bi-exponential decay model (Figure \ref{Fig:lifetimes}C), which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8 $\pm$ 0.9\%, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8 $\pm$ 1\%). The residual amount of long-lived RecB spots in the presence of Gam could be a result of residual DSB binding despite the presence of Gam. This residual binding could also explain the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DSBs, and specifically caused long-lived spots to disappear, we conclude that long-lived spots correspond to RecB molecules bound to a DSB (and we will refer to them as DSB-bound RecB throughout this article). Given that under Gam overexpression, 95\% of RecB spots had a lifetime shorter than 10 sec (Figure \ref{Fig:lifetimes}D), we considered any spot with a lifetime over 10 sec to be a DSB-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely a result of a combination of short-lived DNA interactions and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-interacting or not.
 
-Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to it for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the number of DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure affected spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
+Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to it for 10 to 14 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the number of DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure affected spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
 
 \subsection*{RecB dissociation time is independent of RecA loading}
 % RecB binding time in the mutants
-Since the duration of the RecB-DSB interaction was unaffected by the amount of DNA damage, we wondered if it was an intrinsic property of RecBCD, or if dissociation of the complex was triggered by the following step in the repair process, the loading of RecA on DNA. To assess this, we used the \dreca\ mutant, which lacks the RecA protein, and the \geneteneighty\ mutant, where RecB has lost its RecA loading activity. We imaged both strains in the presence and absence of ciprofloxacin (30 ng/ml), computed histograms of RecB spot lifetimes and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DSBs (Table \ref{tab:fit_mutants}). In the \dreca\ mutant, the distributions-binding lifetime of RecB was similar to the wild-type ($\sim$12 sec), both in the presence and absence of ciprofloxacin. This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of wild-type RecBCD from DNA. In contrast, \teneighty\ stayed bound to DSBs for longer on average than wild-type RecB ($\sim$16 to 19 sec). This could be a result of the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging because of the DNA strands threading through the RecBCD complex.
+Since the duration of the RecB-DSB interaction was unaffected by the amount of DNA damage, we wondered if it was an intrinsic property of RecBCD, or if dissociation of the complex was triggered by the following step in the repair process, the loading of RecA on DNA. To assess this, we used the \dreca\ mutant, which lacks the RecA protein, and the \geneteneighty\ mutant, where RecB has lost its RecA loading activity. We imaged both strains in the presence and absence of ciprofloxacin (30 ng/ml), computed histograms of RecB spot lifetimes and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DSBs (Table \ref{tab:fit_mutants}). In the \dreca\ mutant, the DSB-binding lifetime of RecB was similar to the wild-type ($\sim$12 sec), both in the presence and absence of ciprofloxacin. This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of wild-type RecBCD from DNA. In contrast, \teneighty\ stayed bound to DSBs for longer on average than wild-type RecB ($\sim$16 to 19 sec). This could be a result of the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging because of the DNA strands threading through the RecBCD complex.
 
 % Table 2: RecB spot lifetime in the mutants
 \begin{table}[htbp]
@@ -100,7 +100,7 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 \end{figure}
 
 % RecB recruitment in WT
-Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DSBs, the rate of appearance of spots can be used to estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, we could calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour in the absence of ciprofloxacin. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle \cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8.2 $\pm$ 3.6 RecB recruited to DSBs per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli \cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will cause multiple DSBs to be repaired simultaneously, and be lethal to most cells.
+Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DSBs, the rate of appearance of spots can be used to estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, we could calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour in the absence of ciprofloxacin. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8.2 $\pm$ 3.6 RecB recruited to DSBs per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli\ \cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will cause multiple DSBs to be repaired simultaneously, and be lethal to most cells.
 
 % RecB recruitment in mutants
 Surprisingly, the rates of recruitment of RecB to DSBs in the \dreca\ and \geneteneighty\ mutants were higher than in the wild-type, both in the absence and in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}B). In both cases, the rate of DSB formation is expected to be the same between the wild-type and the mutants. Therefore, we hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired, as was previously reported in the case of the \dreca\ mutant \cite{Capaldo1975,Skarstad1993}. In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/ml ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant (Figure \ref{Fig:recruitment}B). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs in a RecA-dependent manner, albeit with lower efficiency than wild-type cells (see Discussion).
@@ -123,7 +123,7 @@ During DSB processing, RecBCD facilitates the loading of the RecA protein on ssD
 RecA loading on ssDNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid \cite{Odsbu2014}. To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to image RecB concomitantly, and to correlate the position of DSB-bound RecB molecules (defined as RecB spots with a lifetime $>$10 sec, see Figure \ref{Fig:lifetimes}D) with that of the nucleoid. In cells that were not exposed to ciprofloxacin, the nucleoid was often observed to be bi-lobed (Figure \ref{Fig:nucleoid}A), consistently with our previous observations \cite{Lepore2023}. After 60 min of exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/ml of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). In addition to the compaction, we observed that nucleoids were increasingly centred, and the cells elongated upon increasing exposure to ciprofloxacin, both in time and concentration (Supp. Figure \ref{SIFig:nucleoid_position}).
 
 % Correlation of nucleoid and RecB spots
-Long-lived RecB spots were found close to the nucleoid (Figures \ref{Fig:nucleoid}A and \ref{Fig:nucleoid}B). This proximity was also observed after different durations of ciprofloxacin exposure (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints}). This observation strengthens our interpretation that long-lived spots are DSB-bound RecB molecules. Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 $\pm$ 0.19µm on average in the absence of ciprofloxacin to 5.5 $\pm$ 0.71µm after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and because of compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DSB-bound RecB molecules overlapped strongly with nucleoid density (Figure \ref{Fig:nucleoid}B), indicating that as the nucleoid was compacted, newly formed DSBs triggered RecB recruitment at the centre of the cell, where the nucleoid was located.
+Long-lived RecB spots were found close to the nucleoid (Figures \ref{Fig:nucleoid}A and \ref{Fig:nucleoid}B). This proximity was also observed after different durations of ciprofloxacin exposure (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints}). This observation strengthens our interpretation that long-lived spots are DSB-bound RecB molecules. Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 $\pm$ 0.19 µm on average in the absence of ciprofloxacin to 5.5 $\pm$ 0.71 µm after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and because of compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DSB-bound RecB molecules overlapped strongly with nucleoid density (Figure \ref{Fig:nucleoid}B), indicating that as the nucleoid was compacted, newly formed DSBs triggered RecB recruitment at the centre of the cell, where the nucleoid was located.
 
 \subsection*{Nucleoid compaction requires RecA loading}
 The spatial distribution of nucleoid density and DSB-bound RecB was affected in the \dreca\ and \geneteneighty\ mutants (Figures \ref{Fig:nucleoid}C and \ref{Fig:nucleoid}D). In the \dreca\ mutant, exposure to ciprofloxacin did not trigger nucleoid compaction and centring as in wild-type cells. This confirmed that nucleoid compaction under ciprofloxacin exposure requires RecA loading, and most likely the induction of the SOS response. Despite the absence of compaction, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This can be attributed to the progressive degradation of the bacterial chromosome by the repeated cycles of RecBCD binding (Figure \ref{Fig:recruitment}B).
